--- a/pipeline/pl_pipeline.yaml
+++ b/pipeline/pl_pipeline.yaml
@@ -22,8 +22,9 @@ deploymentSpec:
         - -c
         - "\nif ! [ -x \"$(command -v pip)\" ]; then\n    python3 -m ensurepip ||\
           \ python3 -m ensurepip --user || apt-get install python3-pip\nfi\n\nPIP_DISABLE_PIP_VERSION_CHECK=1\
-          \ python3 -m pip install --quiet --no-warn-script-location 'pandas' 'minio'\
-          \ 'kfp' && \"$0\" \"$@\"\n"
+          \ python3 -m pip install --quiet --no-warn-script-location 'kfp==2.7.0'\
+          \ '--no-deps' 'typing-extensions>=3.7.4,<5; python_version<\"3.9\"' && \"\
+          $0\" \"$@\"\n"
         - sh
         - -ec
         - 'program_path=$(mktemp -d)
@@ -49,7 +50,7 @@ deploymentSpec:
           \     data=io.BytesIO(encodeddata),\n                length=len(encodeddata),\n\
           \                content_type='application/csv'\n                )\n   \
           \ except Exception as err:\n        print(err)\n\n"
-        image: python:3.11.8-alpine
+        image: devourey/scikit-sandbox:latest
     exec-process-data:
       container:
         args:
@@ -136,8 +137,8 @@ deploymentSpec:
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef train_data():\n    import pandas as pd\n    from sklearn.linear_model\
-          \ import LogisticRegression\n    import pickle\n    import tempfile\n  \
-          \  from minio import Minio\n\n    minio_client = Minio(\n        \"192.168.1.29:9000\"\
+          \ import LogisticRegression\n    import pickle\n    from minio import Minio\n\
+          \    import io\n\n    minio_client = Minio(\n        \"192.168.1.29:9000\"\
           ,\n        \"01UEi1KBqoAFeN3ANxIK\",\n        \"KXeCpTVnkovXYg1Mi3pSJrOkMlzNe5sbJiHdubxK\"\
           ,\n        secure=False\n        )\n\n    bucket_name = 'premier-league'\n\
           \    try:\n        res_for_X = minio_client.get_object(bucket_name, 'X-train.csv')\n\
@@ -145,11 +146,11 @@ deploymentSpec:
           \n    except Exception as err:\n        print(err)\n\n    X_train = pd.read_csv(io.BytesIO(res_for_X.data))\n\
           \    y_train = pd.read_csv(io.BytesIO(res_for_y.data))\n\n    X_train =\
           \ pd.DataFrame(X_train)\n    y_train = pd.DataFrame(y_train)\n\n    model\
-          \ = LogisticRegression()\n    model.fit(X_train, y_train)\n\n    try:\n\n\
-          \        with tempfile.TemporaryFile() as f:\n            pickle.dump(model,\
-          \ f)\n            f.seek(0)\n            minio_client.put_object(Body=f.read(),\
-          \ bucket=bucket_name, key='model.pkl')\n    except Exception as e:\n   \
-          \     print(e)\n\n"
+          \ = LogisticRegression()\n    model.fit(X_train, y_train)\n\n    try:\n\
+          \        bytes_file = pickle.dumps(model)\n        minio_client.put_object(\n\
+          \            bucket_name=bucket_name,\n            object_name='model.pkl',\n\
+          \            data=io.BytesIO(bytes_file),\n            length=len(bytes_file)\n\
+          \        )\n    except Exception as e:\n        print(e)\n\n"
         image: devourey/scikit-sandbox:latest
 pipelineInfo:
   description: A simple pipeline to automate a machine learning workflow to create
